--- a/index.ipynb
+++ b/index.ipynb
@@ -133,7 +133,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df.groupby(['Sex', 'Pclass'])['Survived'].mean()"
+   ]
   }
  ],
  "metadata": {
