Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -134,7 +134,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.groupby(['Sex', 'Pclass'])['Survived'].mean()"
+    "df.groupby(['Sex', 'Pclass'])['Survived'].mean()['female'][1]"
    ]
   }
  ],
